@@ -49,6 +49,7 @@
 -------------------------------------------------------------------------------
 CREATE SEQUENCE group2group_seq;
 CREATE SEQUENCE group2groupcache_seq;
+CREATE SEQUENCE tasklistitem_seq;
 
 ------------------------------------------------------
 -- Group2Group table, records group membership in other groups
@@ -170,7 +171,7 @@ CREATE TABLE most_recent_checksum
 (
     bitstream_id INTEGER PRIMARY KEY,
     to_be_processed NUMBER(1) NOT NULL,
-    last_checksum VARCHAR(64) NOT NULL,
+    expected_checksum VARCHAR(64) NOT NULL,
     current_checksum VARCHAR(64) NOT NULL,
     last_process_start_date TIMESTAMP NOT NULL,
     last_process_end_date TIMESTAMP NOT NULL,
@@ -269,7 +270,7 @@ insert into most_recent_checksum
 (
     bitstream_id,  
     to_be_processed,
-    last_checksum,
+    expected_checksum,
     current_checksum,
     last_process_start_date,
     last_process_end_date,
@@ -314,8 +315,8 @@ insert into checksum_history
 select most_recent_checksum.bitstream_id,
      most_recent_checksum.last_process_end_date,
      date_trunc('milliseconds', now()),
-      most_recent_checksum.last_checksum,
-      most_recent_checksum.last_checksum;
+      most_recent_checksum.expected_checksum,
+      most_recent_checksum.expected_checksum;
 
 -- update the history to indicate that this was 
 -- the first time the software was installed
@@ -368,3 +369,13 @@ SELECT Communities2Item.community_id, ItemsBySubject.*
 FROM ItemsBySubject, Communities2Item
 WHERE ItemsBySubject.item_id = Communities2Item.item_id
 ;
+
+-------------------------------------------------------
+--  TasklistItem table
+-------------------------------------------------------
+CREATE TABLE TasklistItem
+(
+  tasklist_id	INTEGER PRIMARY KEY,
+  eperson_id	INTEGER REFERENCES EPerson(eperson_id),
+  workflow_id	INTEGER REFERENCES WorkflowItem(workflow_id)
+);
